Remove top margin from source feedback section

--- a/app/views/admin/calendars/new.html.erb
+++ b/app/views/admin/calendars/new.html.erb
@@ -73,7 +73,7 @@
             </p>
 
             <%# Source validation feedback %>
-            <div class="mt-4 hidden" data-calendar-wizard-target="sourceFeedback">
+            <div class="hidden" data-calendar-wizard-target="sourceFeedback">
               <%# Success %>
               <div class="alert alert-success text-sm hidden" data-calendar-wizard-target="sourceSuccess">
                 <%= icon(:check_circle, size: '5', css_class: 'shrink-0') %>
