Default users table sort to last login descending

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
       updated_at: { fit: true },
       actions: { sortable: false, fit: true }
     },
-    default_sort: { column: 'updated_at', direction: 'desc' },
+    default_sort: { column: 'last_sign_in_at', direction: 'desc' },
     filters: [
       {
         type: :radio,
