--- a/app/components/partner_filter_component.html.erb
+++ b/app/components/partner_filter_component.html.erb
@@ -6,7 +6,7 @@
                     },
               class: 'filters__form' do %>
   <div class="breadcrumb__element breadcrumb__element--last">
-    <span class="filters__link">Filter by:</span>
+    <span>Filter by:</span>
 
     <% if show_category_filter? %>
       <div class="breadcrumb__filters filters">
