--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -6,8 +6,7 @@
 <%= turbo_frame_tag "partner_previews" do %>
 <div class="c c--lg-space-after">
   <%= render(BreadcrumbComponent.new(trail: [['Partners', partners_path]], site_name: @site.name)) do %>
-    <%= render PartnerFilterComponent.new(partners: @partners,
-                                          site: @site,
+    <%= render PartnerFilterComponent.new(site: @site,
                                           selected_category: @selected_category,
                                           selected_neighbourhood: @selected_neighbourhood) %>
   <% end %>
