add a max-height:100% to img in base styles

--- a/app/assets/stylesheets/base/image.scss
+++ b/app/assets/stylesheets/base/image.scss
@@ -1,13 +1,14 @@
 img {
 	max-width: 100%;
-}
+	max-height: 100%;
 
-img.rounded {
-	border-radius: 1rem;
-}
+	&.rounded {
+		border-radius: 1rem;
+	}
 
-img.round {
-	border-radius: 50%;
+	&.round {
+		border-radius: 50%;
+	}
 }
 
 figure {
