WIP DO NOT MERGE. add temp light cream colours to temp_tailwind_compat.scss. adjust form label spacing to match prev. add form icons and css size fallback to SvgIconsHelper

--- a/app/assets/stylesheets/temp_tailwind_compat.scss
+++ b/app/assets/stylesheets/temp_tailwind_compat.scss
@@ -75,3 +75,13 @@
 .text-placecal-purple {
 	color: #9c27b0;
 }
+
+// temp names for colours from app/assets/stylesheets/variables/colours.scss used in svgs
+// need name decisions from Kim
+.text-base-background {
+	color: #fffcf0;
+}
+
+.text-home-background {
+	color: #fffbef;
+}
