--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -31,6 +31,9 @@
 		@include flex(0 1 auto);
 
 		margin-right: 0.5rem;
+		display: flex;
+		align-items: center;
+		gap: 0.25em;
 
 		@include for-phone-only {
 			margin-bottom: 0.5rem;
