--- a/app/assets/stylesheets/components/filters.scss
+++ b/app/assets/stylesheets/components/filters.scss
@@ -15,6 +15,9 @@
 			background: none;
 			font-family: $sans-serif;
 			cursor: pointer;
+			display: flex;
+			align-items: center;
+			gap: 0.25em;
 		}
 	}
 
