--- a/app/views/joins/new.html.erb
+++ b/app/views/joins/new.html.erb
@@ -27,12 +27,12 @@
           <img src='/assets/icons/forms/selected.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/forms/tick.svg' style="width: 1.25rem; height: 1.25rem"/>
 
-          <%= icon(:checkbox) %>
-          <%= icon(:checkbox_check) %>
-          <%= icon(:cross) %>
-          <%= icon(:radio) %>
-          <%= icon(:radio_check) %>
-          <%= icon(:tick) %>
+          <%= icon(:form_checkbox) %>
+          <%= icon(:form_checkbox_check) %>
+          <%= icon(:form_cross) %>
+          <%= icon(:form_radio) %>
+          <%= icon(:form_radio_check) %>
+          <%= icon(:form_tick) %>
         </div>
 
         <h3>Arrow Icons</h3>
@@ -76,6 +76,28 @@
           <%= icon(:event_time) %>
         </div>
 
+        <h3>Misc Icons</h3>
+        <div style="display: grid; grid-template-columns: repeat(8, auto); gap: 1em; width: fit-content; ">
+          <img src='/assets/icons/email.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/facebook.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/instagram.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/menu.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/phone.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/time.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/twitter.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/website.svg' style="width: 1.25rem; height: 1.25rem"/>
+
+
+          <%= icon(:misc_email ) %>
+          <%= icon(:misc_facebook ) %>
+          <%= icon(:misc_instagram ) %>
+          <%= icon(:misc_menu, css_class: 'text-base-secondary') %>
+          <%= icon(:misc_phone) %>
+          <%= icon(:misc_time, css_class: 'text-base-secondary') %>
+          <%= icon(:misc_twitter) %>
+          <%= icon(:misc_website) %>
+        </div>
+
         <%= simple_form_for @join, url: get_in_touch_path, html: { class: 'form' } do |f| %>
           <%= invisible_captcha %>
           <div class="form__person form__mid-width">
@@ -108,16 +130,16 @@
                 <%= f.check_box :ringback %>
                 <label for="join_ringback">
                   A ring back
-                  <%= icon(:checkbox, size: '0') %>
-                  <%= icon(:checkbox_check, size: '0', css_class: 'checked') %>
+                  <%= icon(:form_checkbox, size: '0') %>
+                  <%= icon(:form_checkbox_check, size: '0', css_class: 'checked') %>
                 </label>
               </div>
               <div class="form__checkbox">
                 <%= f.check_box :more_info %>
                 <label for="join_more_info">
                   More information
-                  <%= icon(:radio, size: '0') %>
-                  <%= icon(:radio_check, size: '0', css_class: 'checked') %>
+                  <%= icon(:form_radio, size: '0') %>
+                  <%= icon(:form_radio_check, size: '0', css_class: 'checked') %>
                 </label>
               </div>
             </div>
