add remaining misc icons from `app/assets/images/icons/` root

--- a/app/views/joins/new.html.erb
+++ b/app/views/joins/new.html.erb
@@ -77,12 +77,17 @@
         </div>
 
         <h3>Misc Icons</h3>
-        <div style="display: grid; grid-template-columns: repeat(8, auto); gap: 1em; width: fit-content; ">
+        <div style="display: grid; grid-template-columns: repeat(13, auto); gap: 1em; width: fit-content; ">
           <img src='/assets/icons/email.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/facebook.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/instagram.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/instagram-circle.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/menu.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/phone.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/place.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/question-mark.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/repeats.svg' style="width: 1.25rem; height: 1.25rem"/>
+          <img src='/assets/icons/roundel.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/time.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/twitter.svg' style="width: 1.25rem; height: 1.25rem"/>
           <img src='/assets/icons/website.svg' style="width: 1.25rem; height: 1.25rem"/>
@@ -91,8 +96,13 @@
           <%= icon(:misc_email ) %>
           <%= icon(:misc_facebook ) %>
           <%= icon(:misc_instagram ) %>
+          <%= icon(:misc_instagram_circle ) %>
           <%= icon(:misc_menu, css_class: 'text-base-secondary') %>
           <%= icon(:misc_phone) %>
+          <%= icon(:misc_place, css_class: 'text-base-secondary') %>
+          <%= icon(:misc_question_mark, css_class: 'text-base-primary') %>
+          <%= icon(:misc_repeats, css_class: 'text-base-secondary') %>
+          <%= icon(:misc_roundel, css_class: 'text-base-primary') %>
           <%= icon(:misc_time, css_class: 'text-base-secondary') %>
           <%= icon(:misc_twitter) %>
           <%= icon(:misc_website) %>
