--- a/app/components/admin/image_upload_component.html.erb
+++ b/app/components/admin/image_upload_component.html.erb
@@ -45,7 +45,7 @@
       <% else %>
         <div class="<%= aspect %> <%= rounded %> border border-base-300 bg-base-200/50 flex items-center justify-center" data-image-preview-target="placeholder">
           <div class="text-center text-gray-500 p-4">
-            <%= icon(placeholder_icon, size: '16', css_class: 'mx-auto mb-3 opacity-50', stroke_width: '1') %>
+            <%= icon(placeholder_icon, size: '16', css_class: 'mx-auto mb-3 opacity-50 stroke-1') %>
             <p class="text-sm font-medium"><%= t('admin.images.no_image_uploaded') %></p>
             <p class="text-xs mt-1"><%= t('admin.images.upload_hint') %></p>
           </div>
