--- a/app/views/admin/neighbourhoods/show.html.erb
+++ b/app/views/admin/neighbourhoods/show.html.erb
@@ -115,7 +115,7 @@
       </div>
     <% else %>
       <div class="flex items-center gap-3 py-4 text-gray-500">
-        <%= icon(:globe, size: '6', stroke_width: '1.5') %>
+        <%= icon(:globe, size: '6', css_class: 'stroke-[1.5]') %>
         <span class="text-sm"><%= t('admin.neighbourhoods.show.is_root') %></span>
       </div>
     <% end %>
