--- a/app/components/admin/empty_state_component.html.erb
+++ b/app/components/admin/empty_state_component.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center <%= padding %>">
-  <%= icon(icon_name, size: icon_size, css_class: 'mx-auto text-base-content/20', stroke_width: '1.5') %>
+  <%= icon(icon_name, size: icon_size, css_class: 'mx-auto text-base-content/20 stroke-1') %>
   <p class="mt-3 text-gray-600"><%= message %></p>
   <% if hint.present? %>
     <p class="text-sm text-gray-500 mt-1"><%= hint %></p>
