--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -99,7 +99,7 @@
 
 <% if @error_calendars.count == 0 && @busy_calendars.count == 0 %>
   <div class="text-center py-12">
-    <%= icon(:check_circle, size: '12', css_class: 'mx-auto text-success/40', stroke_width: '1.5') %>
+    <%= icon(:check_circle, size: '12', css_class: 'mx-auto text-success/40 stroke-[1.5]') %>
     <p class="mt-3 font-medium text-success"><%= t('admin.jobs.empty.title') %></p>
     <p class="text-sm text-gray-600"><%= t('admin.jobs.empty.description') %></p>
   </div>
